--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo "Building FE"
-      - run: npm run ci
+        with:
+          node-version: "20.x"
+      - run: npm ci
       - run: npm run build --if-present
       - run: npm test
