--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "Building FE"
+      - name: Use Node.js 20
+      - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
       - run: npm ci
