--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -10,5 +10,12 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "Checking branch naming convention"
+      - name: Checkout the branch
+        uses: actions/checkout@v2
+        run: echo "Checking branch naming convention"
+      - name: calling the reusable workflow.
+        uses: ./resuable_workflow.yml
+        with:
+          environment: "DEV"
+        secrets:
+          personal_access_token: ${{secrets.personal}}
