--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -10,8 +10,8 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the branch
-        run: echo "Checking branch naming convention"
+      - name: Checkout code because using workflow file
+        uses: actions/checkout@v2
       - name: calling the reusable workflow.
         uses: ./.github/workflows/reusable_workflow.yml
         with:
