--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -10,8 +10,10 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Checkout code because using workflow file
-        uses: actions/checkout@v2
+        run: echo "welcome"
+
       - name: calling the reusable workflow.
         uses: ./.github/workflows/reusable_workflow.yml
         with:
