--- a/.github/workflows/reusable_workflow.yml
+++ b/.github/workflows/reusable_workflow.yml
@@ -10,5 +10,6 @@ jobs:
   calling:
     runs-on: ubuntu-latest
     steps:
-      - name: This is the environment ${{inputs.environment}}
+      - uses: actions/checkout@v2
+      - name: This is the environment
         run: echo "this is the environment name ${{inputs.environment}}"
