--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -10,3 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Checkout code because using workflow file
         run: echo "welcome"
+      - name: calling the reusable workflow.
+        uses: ./.github/workflows/reusable_workflow.yml
+        with:
+          environment: "DEV"
