--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -11,6 +11,6 @@ jobs:
 
       - name: Checkout code because using workflow file
         run: echo "welcome"
-      - uses: ./.github/workflows/reusable_workflow.yml
+      - uses: sumit844/reactjs/.github/workflows/reusable_workflow.yml
         with:
           environment: "DEV"
