--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -6,10 +6,11 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    uses: sumit844/reactjs/.github/workflows/reusable_workflow.yml@main
+    with:
+      environment: "DEV"
+
     steps:
       - uses: actions/checkout@v2
-      - uses: sumit844/reactjs/.github/workflows/reusable_workflow.yml@main
-        with:
-          environment: "DEV"
       - name: Checkout code because using workflow file
         run: echo "welcome"
