--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -6,6 +6,4 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    uses: sumit844/reactjs/.github/workflows/reusable_workflow.yml@main
-    with:
-      environment: ${{ github.ref_name }}
+    uses: ./.github/workflows/reusable_workflow.yml@main
