--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -6,4 +6,4 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    uses: ./.github/workflows/reusable_workflow.yml@main
+    uses: ./.github/workflows/reusable_workflow.yml
