--- a/.github/workflows/branch_naming_convention.yml
+++ b/.github/workflows/branch_naming_convention.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  workflow_call:
+  workflow_dispatch:
+
 jobs:
   check:
     uses: ./.github/workflows/reusable_workflow.yml
